<resources>
    <string name="app_name">Digital Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UF ELX Lab</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Lessons</string>
    <string name="menu_gallery_bookmarked">Bookmarked Lessons</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_lesson">Lesson</string>
    <string name="menu_learnMore">Learn More</string>
    <string name="menu_avatarSelect">Choose an Avatar</string>
    <string name="menu_signIn">Set Your ID</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_onBoarding">App Info</string>
</resources>