<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testapp2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.testapp2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gallery_bookmarked"
        android:name="com.example.testapp2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery_bookmarked"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.testapp2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.example.testapp2.ui.lesson.LessonFragment"
        android:label="@string/menu_lesson"
        tools:layout="@layout/fragment_lesson" />

    <fragment
        android:id="@+id/nav_learnMore"
        android:name="com.example.testapp2.ui.learnMore.LearnMoreFragment"
        android:label="@string/menu_learnMore"
        tools:layout="@layout/fragment_learn_more" />

    <fragment
        android:id="@+id/nav_avatarSelect"
        android:name="com.example.testapp2.ui.avatarSelect.AvatarSelectFragment"
        android:label="@string/menu_avatarSelect"
        tools:layout="@layout/fragment_avatar_select" />
</navigation>