<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery_bookmarked"-->
<!--            android:icon="@drawable/bookmark_full"-->
<!--            android:title="@string/menu_gallery_bookmarked" />-->

<!--        <item-->
<!--            android:id="@+id/nav_avatarSelect"-->
<!--            android:icon="@drawable/person_icon"-->
<!--            android:title="@string/menu_avatarSelect" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
<!--        <item-->
<!--            android:id="@+id/nav_lesson"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_lesson" />-->
<!--        <item-->
<!--            android:id="@+id/nav_learnMore"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_learnMore" />-->
    </group>
</menu>